GNOME Bugzilla – Bug 705624
paned: minus the size by the handle for the for_child1 computation.
Last modified: 2013-09-12 11:44:27 UTC
Created attachment 251092 [details] [review] paned: minus the size by the handle for the for_child1 computation. I wonder if there could be side effects on child1 size allocated (ie I clamp it to a smaller size... we might want to make this conditional to when child2 cannot hold the handle size). Fixes: (rhythmbox:22802): Gtk-CRITICAL **: _gtk_widget_get_preferred_size_for_size: assertion 'size >= -1' failed that is gtk_paned_get_preferred_size_for_opposite_orientation calls _gtk_widget_get_preferred_size_for_size on child2 with a negative size. As gtkpaned size was (32), child1 minimum size was (55) then for_child1 became (32) for an handle_size of (5). Thus for_child2 ended up as (-5).
Attachment 251092 [details] pushed as 6ea4c1a - paned: minus the size by the handle for the for_child1 computation.
*** Bug 705527 has been marked as a duplicate of this bug. ***